--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,123 @@ body{
 }
 
 .top{
-background-color: blue;
+background-color: #216392;
 width: 100%;
-height: 10px;
+height: 20px;
+}
+
+.top2{
+	background-color: #3070a8;
+	width: 100%;
+	height: 60px;
+	color: aliceblue
+}
+.w1{
+	float: left;
+	margin-top: 13px;
+}
+
+.carousel {
+	width: 100%;
+	height: 400px;
+	overflow: hidden;
+	position: relative;
+}
+
+.carousel .container {
+	width: 100%;
+	height: 100%;
+
+	position: relative;
+	left: 0;
+
+	display: flex;
+
+	/* 过渡动画 1s */
+	transition: all 1s;
+}
+
+.carousel .container {
+	width: 100%;
+	height: 100%;
+
+	flex-shrink: 0;
+}
+
+.carousel .container img {
+	width: 100%;
+	height: 100%;
+
+	object-fit: cover;
+}
+
+.carousel .shift .btn {
+	/* 绝对定位且垂直居中 */
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	margin: auto 0;
+
+	background-color: teal;
+	color: white;
+
+	width: 50px;
+	height: 50px;
+	border-radius: 8px;
+
+	font-size: 40px;
+	font-weight: bold;
+
+	/* 字符水平垂直居中 */
+	line-height: 50px;
+	text-align: center;
+
+	cursor: pointer;
+
+	user-select: none;
+
+	/* 不透明度 0.5 */
+	opacity: 0.5;
+}
+.carousel .shift .left {
+	left: 20px;
+}
+.carousel .shift .right {
+	right: 20px;
+}
+
+.carousel .bottom {
+	position: absolute;
+
+	bottom: 20px;
+
+	/* 绝对定位水平居中 */
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+
+	/* 宽度等同于内容宽度 */
+	/* 知识点：https://3yya.com/courseware/chapter/79#关键字属性 */
+	width: max-content;
+
+	display: flex;
+	/* 指示器间距 */
+	gap: 10px;
+}
+
+.carousel .bottom .indicator {
+	height: 5px;
+	width: 40px;
+
+	background-color: teal;
+
+	opacity: 0.5;
+	cursor: pointer;
+}
+
+.carousel:hover .bottom .indicator {
+	opacity: 1;
+}
+.carousel:hover .shift .btn {
+	opacity: 1;
 }
